CKA-Certified-Kubernetes-Administrator/exercises/15-gateway-api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: load-app
  name: load-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: load-app
  strategy: {}
  template:
    metadata:
      labels:
        app: load-app
    spec:
      containers:
      - image: nginx1.28
        name: nginx1-28-vp5mf
        resources: {}
status: {}
