CKA-Certified-Kubernetes-Administrator/exercises/15-gateway-api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: exercise-15
spec:
  selector:
    app.kubernetes.io/name: web 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
